# invoice-gen

./: Cargo.toml  README.en.md  README.md  flake.nix  shell.nix
src/: lib.rs
src/fa_2/: builder.rs  mod.rs  models.rs  tests.rs
src/fa_3/: builder.rs  mod.rs  models.rs  rounding_tests.rs  tests.rs
src/fa_rr/: builder.rs  mod.rs  models.rs  tests.rs
src/pef_3/: builder.rs  commontypes.rs  isotypes.rs  mod.rs  models.rs  tests.rs  tests_rules.rs
src/shared/: models.rs
